<resources>
    <string name="app_name">SoVamu</string>
    <string name="txt_email">e-mail</string>
    <string name="txt_senha">senha</string>
    <string name="btn_entrar">ENTRAR</string>
    <string name="txt_esqueci_senha">Esqueci minha senha</string>
    <string name="txt_loading">Carregando</string>
    <string name="imageContentDescription">Logo do aplicativo</string>
    <string name="text_task">Trilho</string>
    <string name="scrum">Scrum</string>
    <string name="daily_s">Daily`s</string>
    <string name="blocks">Impedimentos</string>
    <string name="todo">TODO</string>
    <string name="title_notification">Título Notificação</string>
    <string name="notification_test">Notification Text</string>
    <string name="image_notification">ImageNotification</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_nome">Nome</string>
    <string name="nome_user">Nome</string>
    <string name="apelido_user">Apelido</string>
    <string name="email_user">E-mail</string>
    <string name="confirmacao_senha">Confirmação</string>
    <string name="senha_nova_user">Senha Nova</string>
    <string name="senha_user">Senha</string>
    <string name="cep_user">Cep</string>
    <string name="buscar_cep_user">Buscar Cep</string>
    <string name="logradouro_user">Logradouro</string>
    <string name="bairro_user">Bairro</string>
    <string name="localidade_user">Localidade</string>
    <string name="compl_user">Nº/Compl</string>
    <string name="uf_user">UF</string>
    <string name="enviar_dados_user">Enviar Dados</string>
    <string name="msg_error_zipcode">Campo cep obrigatório</string>
    <string name="msg_name">Campo nome obrigatório !</string>
    <string name="msg_surname">Campo apelido obrigatório !</string>
    <string name="msg_email">Campo e-mail obrigatório !</string>
    <string name="msg_password">Campo senha obrigatório !</string>
    <string name="msg_zipcode">Campo cep obrigatório !</string>
    <string name="msg_publicplace">Campo logradouro obrigatório !</string>
    <string name="msg_complement">Campo complemento obrigatório !</string>
    <string name="msg_district">Campo bairro obrigatório !</string>
    <string name="msg_locality">Campo localidade obrigatório !</string>
    <string name="msg_uf">Campo UF obrigatório !</string>
    <string name="preencher_campos">Preencher os campos em vermelho</string>
    <string name="dialog_informe_email">Informe seu e-mail</string>
    <string name="enviar_email">Enviar</string>
    <string name="cancelar_envio_email">Cancelar</string>
    <string name="title_alert_dialog">Atenção !</string>

</resources>