<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="titleText"
            type="String" />

        <variable
            name="notificationText"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="311dp"
        android:layout_height="102dp"
        android:background="@drawable/bg_notification"
        android:id="@+id/notification_view">

        <TextView
            android:id="@+id/tv_title_notification"
            style="@style/TitleNotification"
            android:text="@{titleText}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_notification"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/title_notification" />

        <TextView
            android:id="@+id/tv_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@{notificationText}"
            android:textColor="@color/item_no_select"
            android:textSize="13.33sp"
            app:layout_constraintStart_toEndOf="@id/iv_notification"
            app:layout_constraintTop_toBottomOf="@id/tv_title_notification"
            tools:text="@string/notification_test" />

        <ImageView
            android:id="@+id/iv_notification"
            android:layout_width="63dp"
            android:layout_height="76dp"
            android:layout_marginBottom="6dp"
            android:src="@drawable/notification"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image_notification" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>